src/features/basic/prun-bugs.module.css
.filter {
  z-index: 1;
}

.scrollTrack {
  z-index: 2;
}

.head {
  > div:nth-child(2) {
    flex-shrink: 0;
  }
}

.gridItem {
  background-color: unset;
}

.gridItemName {
  display: block;
  text-align: center;
  padding-top: 1px;
  width: 100%;
}

.disablePointerEvents {
  pointer-events: none;
}

.containerScrollbarGutter {
  scrollbar-gutter: auto;
}

